# github-leaderboard

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  rubric.default.yaml
.github/workflows/: autograding.yml  repobeats.yml  repository-analysis.yml
backend/: main.py
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: ActivityChart.tsx  Toaster.tsx
client/src/components/layout/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx
client/src/context/: AuthContext.tsx  SocketContext.tsx
client/src/pages/: AuthCallback.tsx  Dashboard.tsx  Leaderboard.tsx  Login.tsx
examples/: uhafner-style-grading.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
server/: Dockerfile  package-lock.json  package.json
server/prisma/: schema.prisma
server/src/: auth.ts  index.ts
server/src/routes/: auth.ts  leaderboard.ts  users.ts  webhooks.ts
src/github_analysis/: __init__.py  cli.py  evaluator.py  github_client.py  models.py
src/github_analysis_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
