[project]
name = "github-analysis-v2"
version = "0.1.0"
description = "Analyze and score GitHub repositories for quality, activity, and education workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
repo-eval = "github_analysis.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
